Fix column alignment

--- a/apps/frontend/src/components/Request/Request.module.css
+++ b/apps/frontend/src/components/Request/Request.module.css
@@ -1,12 +1,7 @@
 .container {
-  display: flex;
-  flex-direction: column;
   background-color: #ffffff;
   border-radius: 12px;
   border: 1px solid #f0f0f0;
-  box-sizing: border-box;
-  margin: 20px 0 0 0;
-  max-width: 240px;
 }
 
 .container:hover {
@@ -62,14 +57,14 @@
 }
 
 .image {
-  width: 100%;
-  height: 182px;
-  border-radius: 12px;
+  border-radius: 1px;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  transition: all 0.6s cubic-bezier(0.43, 0.41, 0.22, 0.91);
   filter: contrast(70%);
+  max-height: 182px;
+  transition: all 0.6s cubic-bezier(0.43, 0.41, 0.22, 0.91);
+  width: 100%;
 }
 
 .image:hover {
