--- a/apps/frontend/src/components/RequestBox/RequestBox.module.css
+++ b/apps/frontend/src/components/RequestBox/RequestBox.module.css
@@ -1,8 +1,3 @@
-.formRow {
-  margin-top: 20px;
-  /* width: 50%; */
-}
-
 .title {
   padding: 0;
 }
@@ -40,3 +35,8 @@
   }
 }
 
+@media screen and (min-width: 1400px) {
+  .requestCol {
+    width: 20%;
+  }
+}
